# cgp-coherence-demo

./: Cargo.toml  README.md
crates/cgp-serde/: Cargo.toml
crates/cgp-serde-alloc/: Cargo.toml
crates/cgp-serde-alloc/src/: lib.rs
crates/cgp-serde-alloc/src/providers/: alloc_deserialize.rs  mod.rs
crates/cgp-serde-alloc/src/traits/: alloc.rs
crates/cgp-serde-arena/: Cargo.toml
crates/cgp-serde-extra/: Cargo.toml
crates/cgp-serde-extra/src/: lib.rs
crates/cgp-serde-extra/src/providers/: base64.rs  date.rs  hex.rs  mod.rs  timestamp.rs
crates/cgp-serde-json/: Cargo.toml
crates/cgp-serde-json/src/: lib.rs
crates/cgp-serde-json/src/code/: decode.rs  encode.rs
crates/cgp-serde-json/src/impls/: from_reader.rs  from_str.rs  mod.rs  to_string.rs
crates/cgp-serde-tests/: Cargo.toml
crates/cgp-serde-tests/src/tests/: arena.rs  basic.rs  mod.rs  nested.rs
crates/cgp-serde-typed-arena/: Cargo.toml
crates/cgp-serde-typed-arena/src/providers/: alloc.rs  mod.rs
crates/cgp-serde-typed-arena/src/traits/: has_arena.rs  mod.rs
crates/cgp-serde/src/: lib.rs
crates/cgp-serde/src/components/: deserialize.rs  deserialize_from.rs  mod.rs  serialize.rs  serialize_to.rs
crates/cgp-serde/src/providers/: bytes.rs  default.rs  deref.rs  display.rs  extend.rs  fields.rs  from.rs  iterator.rs  mod.rs  record.rs  serde.rs  string.rs  try_from.rs
crates/cgp-serde/src/types/: as_json.rs  deserialize_with_context.rs  mod.rs  serialize_with_context.rs  with_context.rs
