[workspace]

resolver = "3"

members = [
    "crates/cgp-serde",
    "crates/cgp-serde-extra",
    "crates/cgp-serde-tests",
]

[workspace.package]
rust-version    = "1.89"
edition         = "2024"
license         = "MIT"
repository      = "https://github.com/contextgeneric/cgp"
authors         = ["Soares Chen <soares.chen@maybevoid.com>"]
keywords        = ["cgp"]

[workspace.dependencies]
cgp                 = { version = "0.4.2" }
cgp-error-anyhow    = { version = "0.4.2" }
serde               = { version = "1.0.219" }
serde_json          = { version = "1.0.143" }
hex                 = { version = "0.4.3" }
base64              = { version = "0.22.1" }
chrono              = { version = "0.4.41" }

cgp-serde           = { version = "0.1.0" }
cgp-serde-extra     = { version = "0.1.0" }

[patch.crates-io]
cgp-serde           = { path = "./crates/cgp-serde" }
cgp-serde-extra     = { path = "./crates/cgp-serde-extra" }

cgp                         = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-core                    = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-extra                   = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-async                   = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-async-macro             = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-component               = { git = "https://github.com/contextgeneric/cgp.git", branch = "delegate-component-unsized" }
cgp-macro                   = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-macro-lib               = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-extra-macro             = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-extra-macro-lib         = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-type                    = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-field                   = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-error                   = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-error-extra             = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-run                     = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-runtime                 = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-sync                    = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-inner                   = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-handler                 = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-monad                   = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-dispatch                = { git = "https://github.com/contextgeneric/cgp.git" }
