[package]
name         = "cgp-serde-tests"
version      =  "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = "CGP-enabled serde implementation"

[dependencies]
cgp                 = { workspace = true }
cgp-serde           = { workspace = true }
cgp-serde-extra     = { workspace = true }

serde       = { workspace = true }
serde_json  = { workspace = true }
hex         = { workspace = true }
base64      = { workspace = true }